--- a/styles/jogadores.css
+++ b/styles/jogadores.css
@@ -33,7 +33,8 @@ h2 {
 #playerInfo img {
   display: block;
   margin: 0 auto 20px auto;
-  border-radius: 8px;
+  border-radius: 20px;
+  box-shadow:0px 1px 10px rgba(35,35,35, 0.4);
 }
 
 /* Parágrafos */
